@@ -1,3 +1,6 @@
+2014-02-20 Stanislas Rolland  <typo3(arobas)sjbr.ca>
+	* Fix bug #43925: Site crashes (500) if security token is clicked after more than 30 days
+
 2013-08-11 Stanislas Rolland  <typo3(arobas)sjbr.ca>
 	* Fix bug #50607: sr_freecap Captcha might not be accepted after submission (Thanks to Roland Schenke)
 
